<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.HobbySuggestionsFragment"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hobbies_suggestions_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_padding"
        android:layout_marginEnd="@dimen/single_hobby_feed_margin"
        android:layout_marginStart="@dimen/single_hobby_feed_margin"
        android:layout_weight="1"
        tools:listitem="@layout/item_hobby"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/hobby_suggestions_reject_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:backgroundTint="@color/cancel_btn_surface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/hobby_suggestions_accept_btn"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hobby_suggestions_accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:backgroundTint="@color/accept_btn_surface"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/hobby_suggestions_reject_btn"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>