<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/default_padding"
    tools:context=".MainFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hobbies_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:layoutManager="GridLayoutManager"
        tools:listitem="@layout/item_hobby"
        tools:spanCount="2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_hobby_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/basic_margin"
        android:layout_marginBottom="@dimen/basic_margin"
        android:contentDescription="@string/suggest_new_hobby"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>