<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".addhobby.NewHobbyActivity">

    <ImageView
        android:id="@+id/new_hobby_image"
        android:layout_width="@dimen/image_preview_size"
        android:layout_height="@dimen/image_preview_size"
        android:background="@color/browser_actions_bg_grey"
        android:layout_margin="@dimen/basic_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/hobby_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby_name_label"
        android:labelFor="@id/new_hobby_name"
        app:layout_constraintTop_toBottomOf="@id/new_hobby_image"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/new_hobby_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:importantForAutofill="no"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hobby_name_label" />

    <Button
        android:id="@+id/submit_new_hobby_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>